Added section: Consistency models in distributed systems

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -105,6 +105,125 @@
     urldate = {2025-05-05}
 }
 
+@online{jepsen-main,
+  author    = {Kyle Kingsbury},
+  title     = {Jepsen Consistency Models},
+  url       = {https://jepsen.io/consistency/models},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-strong-serializable,
+  author    = {Kyle Kingsbury},
+  title     = {Strict Serializable},
+  url       = {https://jepsen.io/consistency/models/strong-serializable},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-serializable,
+  author    = {Kyle Kingsbury},
+  title     = {Serializable},
+  url       = {https://jepsen.io/consistency/models/serializable},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-linearizable,
+  author    = {Kyle Kingsbury},
+  title     = {Linearizable},
+  url       = {https://jepsen.io/consistency/models/linearizable},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-sequential,
+  author    = {Kyle Kingsbury},
+  title     = {Sequential},
+  url       = {https://jepsen.io/consistency/models/sequential},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-repeatable-read,
+  author    = {Kyle Kingsbury},
+  title     = {Repeatable Read},
+  url       = {https://jepsen.io/consistency/models/repeatable-read},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-snapshot-isolation,
+  author    = {Kyle Kingsbury},
+  title     = {Snapshot Isolation},
+  url       = {https://jepsen.io/consistency/models/snapshot-isolation},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-cursor-stability,
+  author    = {Kyle Kingsbury},
+  title     = {Cursor Stability},
+  url       = {https://jepsen.io/consistency/models/cursor-stability},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-monotonic-atomic-view,
+  author    = {Kyle Kingsbury},
+  title     = {Monotonic Atomic View},
+  url       = {https://jepsen.io/consistency/models/monotonic-atomic-view},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-read-committed,
+  author    = {Kyle Kingsbury},
+  title     = {Read Committed},
+  url       = {https://jepsen.io/consistency/models/read-committed},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-read-uncommitted,
+  author    = {Kyle Kingsbury},
+  title     = {Read Uncommitted},
+  url       = {https://jepsen.io/consistency/models/read-uncommitted},
+  urldate   = {2025-06-07}, 
+}
+
+@online{jepsen-causal,
+  author    = {Kyle Kingsbury},
+  title     = {Causal},
+  url       = {https://jepsen.io/consistency/models/causal},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-pram,
+  author    = {Kyle Kingsbury},
+  title     = {PRAM},
+  url       = {https://jepsen.io/consistency/models/pram},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-writes-follow-reads,
+  author    = {Kyle Kingsbury},
+  title     = {Writes Follow Reads},
+  url       = {https://jepsen.io/consistency/models/writes-follow-reads},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-monotonic-reads,
+  author    = {Kyle Kingsbury},
+  title     = {Monotonic Reads},
+  url       = {https://jepsen.io/consistency/models/monotonic-reads},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-monotonic-writes,
+  author    = {Kyle Kingsbury},
+  title     = {Monotonic Writes},
+  url       = {https://jepsen.io/consistency/models/monotonic-writes},
+  urldate   = {2025-06-07},
+}
+
+@online{jepsen-read-your-writes,
+  author    = {Kyle Kingsbury},
+  title     = {Read Your Writes},
+  url       = {https://jepsen.io/consistency/models/read-your-writes},
+  urldate   = {2025-06-07},
+}
+
 @book{WebServices,
     author  = {{G. Alonso, F. Casati, H. Kuno, V. Machiraju}},
     title   = {Web Services. Concepts, Architectures and Applications},
