--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -1191,6 +1191,191 @@ OIDC расширяет OAuth 2.0 следующими основными воз
 \item \textbf{MongoDB Atlas:} служба баз данных NoSQL.
 \end{itemize}
 
+\subsection{Модели согласованности в распределённых системах}
+
+В распределённых системах невозможно одновременно достичь полной устойчивости к сбоям, высокой доступности и сильных гарантий согласованности: для баланса между этими параметрами применяются различные \textbf{модели согласованности}. 
+Они определяют, какое поведение может наблюдать клиент при одновременном доступе к данным с множества узлов, какие бывают допущены аномалии, когда доступны чтение и запись, и насколько согласовано поведение клиентов между собой.  
+Знание и выбор этих моделей — основа проектирования любой отказоустойчивой СУБД или распределённого хранилища~\autocite{jepsen-main}.
+
+\subsubsection{Иерархия и взаимосвязи моделей}
+
+На рис.~\ref{fig:jepsen-consistency-tree} изображена иерархия моделей согласованности. Стрелки показывают взаимосвязь между моделями согласованности в распределенных системах.
+Например, Strict Serializable подразумевает как Serializable, так и Linearizable, Linearizable подразумевает Sequential и так далее. 
+Цвета показывают, насколько доступна каждая модель для распределенной системы в асинхронной сети.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.85\textwidth]{assets/distributed/jepsen_consistency_models.png}
+    \caption{Иерархия моделей согласованности и их доступность}
+    \label{fig:jepsen-consistency-tree}
+\end{figure}
+
+\textbf{Цветовая схема:}
+
+\begin{itemize}
+    \item \textbf{Розовый} — Неустойчива к сбоям сети (unavailable): возможна остановка или невозможность выполнения запросов в ряде сценариев (например, разделённая сеть).
+    \item \textbf{Оранжевый} — Липкая доступность (sticky available): работает на каждом неисправном узле, если клиент всегда обращается к одному и тому же серверу, а не переключается на новый. 
+    \item \textbf{Голубой} — Полная доступность (total available): работает на каждом неисправном узле, даже если сеть разделена или часть серверов не отвечает.
+\end{itemize}
+
+\subsubsection{Обзор основных моделей и их свойств}
+
+\textbf{Strict Serializability (Строгая сериализуемость)}~\\
+
+\textbf{Гарантии:}  ~\\
+Результат выполнения нескольких параллельных транзакций такой же, как если бы они выполнялись последовательно.
+
+\textbf{Доступность:}  ~\\
+Модель \textit{не достижима} (unavailable) при некоторых типах сбоев: если сеть разделяется или лидер становится недоступен, обработка запросов должна быть остановлена.  
+
+\textbf{Аномалии:}  ~\\
+Полное отсутствие аномалий — клиент всегда получает согласованное состояние.\autocite{jepsen-strong-serializable} ~\\
+
+\textbf{Serializable (Сериализуемость)}~\\
+
+\textbf{Гарантии:} ~\\ 
+Транзакции в системе выглядят так, будто они были выполнены последовательно, но сериализуемость не требует, чтобы результат чтения всегда отражал последние изменения других клиентов или самого себя из других транзакций. 
+
+\textbf{Доступность:}  ~\\
+Аналогично Strict Serializability: unavailable — не поддерживается ни при каких сетевых разрывах.  
+
+\textbf{Аномалии:}  ~\\
+Отсутствуют.\autocite{jepsen-serializable}~\\
+
+\textbf{Linearizability (Линеаризуемость)}~\\
+
+\textbf{Гарантии:}  ~\\
+Модель согласованности для отдельного объекта, требующая чтобы все транзакции выглядели так, как будто они происходят атомарно в некотором порядке, который согласуется с реальным временем их вызова.
+
+\textbf{Доступность:}  ~\\
+Недостижимо при разделении сети (unavailable).  
+
+\textbf{Аномалии:}  ~\\
+Отсутствуют.\autocite{jepsen-linearizable}~\\
+
+\textbf{Sequential Consistency (Последовательная согласованность)}~\\
+
+\textbf{Гарантии:}  ~\\
+Поддерживает общий последовательный порядок транзакций для всех клиентов. В отличие от линеаризуемости, последовательная согласованность не требует, чтобы этот общий порядок был связан
+ с реальным временем исполнения операций. То есть операция B может быть "логически" раньше A даже если в реальности была вызвана позже A.
+
+ \textbf{Доступность:}  ~\\
+Недостижимо при разделении сети (unavailable).  
+
+\textbf{Аномалии:}  ~\\
+Stale Read: результат чтения может не содержать самых последних записей других процессов, даже если эти записи уже завершены.\autocite{jepsen-sequential}~\\
+
+\textbf{Snapshot Isolation}~\\
+
+\textbf{Гарантии:}  ~\\
+Каждая транзакция работает как будто с независимым неизменяемым снимком базы на момент своего старта. Все её изменения видны только ей (до commit). 
+После commit они становятся видимы всем, кто начинает транзакцию позже.
+Если транзакция пытается изменить объект, который был изменён и зафиксирован другой транзакцией с момента её старта, то будет прервана.
+
+\textbf{Доступность:}  ~\\
+Недостижимо при разделении сети (unavailable).  
+
+\textbf{Аномалии:}  ~\\
+Возможен write skew: две параллельные транзакции могут прочитать пересекающиеся данные, изменить не пересекающиеся поля и успешно зафиксироваться, вместе нарушая ограничения (например, ограничение суммы).\autocite{jepsen-snapshot-isolation}~\\
+
+\textbf{Repeatable Read}~\\
+
+\textbf{Гарантии:}  ~\\
+Читающая транзакция «не видит» изменения данных, которые были ею ранее прочитаны. При этом никакая другая транзакция не может изменять данные, читаемые текущей транзакцией, пока та не окончена.
+Однако другие транзакции могут вставлять новые строки, соответствующие условиям поиска инструкций, содержащихся в текущей транзакции. При повторном запуске инструкции текущей транзакцией будут 
+извлечены новые строки, что приведёт к фантомному чтению.  
+
+\textbf{Доступность:}  ~\\
+Недостижимо при разделении сети (unavailable).  
+
+\textbf{Аномалии:}  ~\\
+Возможны фантомные чтения: изменяется результат предикатного запроса за счёт добавления/удаления строк.\autocite{jepsen-repeatable-read}~\\
+
+\textbf{Cursor Stability}~\\ 
+
+\textbf{Гарантии:}  ~\\
+Введение понятия "курсора". Курсор указывает на объект, который обрабатывается транзакцией; этот объект нельзя изменять другими транзакциями, 
+пока курсор не будет отпущен или пока транзакция не завершится.
+
+\textbf{Доступность:}  ~\\
+Недостижимо при разделении сети (unavailable).  
+
+\textbf{Аномалии:}  ~\\
+Non-repeatable Read: читая объект вне курсора, можно столкнуться с тем, что значение этого объекта изменится другой транзакцией в ходе одной и той же транзакции (неповторяемое чтение) 
+и Phantom: набор строк по предикату может измениться.\autocite{jepsen-cursor-stability}~\\
+
+\textbf{Monotonic Atomic View}~\\
+
+\textbf{Гарантии:}  ~\\
+Любая транзакция либо видит полные результаты (все изменения) другой транзакции, либо не видит ничего из них.
+Предотвращается ситуация, когда часть изменений уже видна, а часть — ещё нет.
+
+\textbf{Доступность:}  ~\\
+Полностью доступна (total available) — даже при разделениях сети каждый узел может продолжать работать.
+
+\textbf{Аномалии:}  ~\\
+Non-repeatable Read и Phantom \autocite{jepsen-monotonic-atomic-view}~\\
+
+\textbf{Read Committed}~\\
+
+\textbf{Гарантии:}  ~\\
+Модель согласованности, усиливающая read uncommitted тем, что не позволяет чтение незафиксированных данных (dirty reads): транзакция не может видеть изменения, 
+сделанные другой транзакцией, пока та не выполнит commit.
+
+\textbf{Доступность:}  ~\\
+Полностью доступна (total available) — даже при разделениях сети каждый узел может продолжать работать.
+
+\textbf{Аномалии:}  ~\\
+Non-repeatable read, phantom read.\autocite{jepsen-read-committed}~\\
+
+\textbf{Read Uncommitted}~\\
+
+\textbf{Гарантии:}  ~\\
+Читаются любые значения, даже незафиксированные. Она обеспечивает только то, что не будет “грязных записей” (dirty write):  
+когда две транзакции одновременно изменяют один и тот же объект перед фиксацией.
+
+\textbf{Доступность:}  ~\\
+Полностью доступна (total available) — даже при разделениях сети каждый узел может продолжать работать.
+
+\textbf{Аномалии:}  ~\\
+Запрещено только Dirty Write: не допускаются ситуации, когда две транзакции одновременно модифицируют одну запись\autocite{jepsen-read-uncommitted}~\\
+
+\textbf{Causal Consistency}~\\
+
+\textbf{Гарантии:}  ~\\
+Все операции, связанные причинно-следственно (“happens-before”), будут наблюдаться всеми процессами в одном и том же порядке, 
+хотя порядок независимых операций может различаться для разных клиентов.
+
+\textbf{Доступность:}  ~\\
+Sticky Available — клиенты должны придерживаться одного и того же сервера.
+
+\textbf{Аномалии:}  ~\\
+Если две транзакции или действия причинно не связаны, то разные клиенты могут видеть их в разном порядке.\autocite{jepsen-causal}~\\
+
+\textbf{Writes Follow Reads}~\\
+
+Если процесс прочитал некоторое значение $v$, возникшее после записи $w_1$, а затем сам выполняет запись $w_2$, то для всех остальных процессов $w_2$ станет видимой только после того, как станет видимым $w_1$.  
+Иными словами, запись не может «переписать прошлое» тех данных, которые уже были прочитаны.\autocite{jepsen-writes-follow-reads}~\\
+
+\textbf{PRAM (Pipeline Random Access Memory)}~\\
+
+Все операции (записи), выполненные одним процессом, всегда наблюдаются всеми остальными процессами в том же порядке, в каком были исполнены этим процессом. Однако записи разных процессов могут быть видны на других узлах в разном порядке.\autocite{jepsen-pram}~\\
 
 
-	
+\textbf{Monotonic Reads}~\\
+
+Если процесс последовательно выполняет чтения $r_1$, затем $r_2$, то $r_2$ никогда не увидит состояние системы, "старее" тех изменений, что были видны при $r_1$.  
+То есть, чтения не могут “откатиться назад”: процесс не увидит более старое состояние после того, как уже увидел более новое. \autocite{jepsen-monotonic-reads}~\\
+
+
+\textbf{Monotonic Writes}~\\
+
+Если процесс выполняет сначала запись $w_1$, затем запись $w_2$, то все другие процессы никогда не увидят $w_2$ без того, чтобы не увидеть $w_1$ раньше.  
+То есть, серию записей одного процесса другие клиенты всегда наблюдают в том же порядке, что и процесс их выполнил.\autocite{jepsen-monotonic-writes}~\\
+
+\textbf{Read Your Writes}~\\
+
+Если процесс совершает запись $w$, а затем выполняет чтение $r$, то $r$ обязательно увидит результат $w$ (то есть, то, что только что было записано этим же процессом).
+Нет никаких гарантий для других процессов: если клиент 1 записал значение, клиент 2 не обязан увидеть это значение сразу же.\autocite{jepsen-read-your-writes}~\\
+
+
