update models.tex: update information about SeaView model and Wood model

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1882,3 +1882,12 @@
     url = {https://github.com/google/differential-privacy},
     urldate = {2025-04-29}
 }
+
+@article{denning1987seaview,
+	title={The SeaView security model},
+	year={1987},
+	author={Denning D. E. and Lunt T. F. and Schell R. R. and Heckman M. and Shockley W. R.},
+	doi={10.1109/SECPRI.1988.8114},
+	urldate={2025-06-08},
+	url={https://ieeexplore.ieee.org/document/8114}
+}
