--- a/part/basis/criteria.tex
+++ b/part/basis/criteria.tex
@@ -876,7 +876,7 @@ Le meme в том, что первый документ на сайте ФСТЭ
 Список участников такой:
 \begin{itemize}
     \item федеральный орган по сертификации;
-    \item организации, аккредитованные ФСТЭК России в качестве орunavailableгана по сертификации (органы по сертификации);
+    \item организации, аккредитованные ФСТЭК России в качестве органа по сертификации (органы по сертификации);
     \item организации, аккредитованные ФСТЭК России в качестве испытательной лаборатории (далее - испытательные лаборатории);
     \item изготовители средств защиты информации (вы находитесь вот тут)
 \end{itemize}
