Добавлен новый текст

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1998,6 +1998,7 @@
     urldate = {2025-04-29}
 }
 
+
 @article{denning1987seaview,
 	title={The SeaView security model},
 	year={1987},
@@ -2006,3 +2007,135 @@
 	urldate={2025-06-08},
 	url={https://ieeexplore.ieee.org/document/8114}
 }
+
+@book{OszuValduriez,
+    author    = {M. Tamer Özsu, Patrick Valduriez},
+    title     = {{Principles of Distributed Database Systems, Third Edition}},
+    publisher = {Springer},
+    year      = 2010,
+    url = {https://cs.uwaterloo.ca/~tozsu/ddbook/}
+}
+
+@article{RajeshKumar,
+	author = {Siddharth Choudhary Rajesh, Dr. Ravinder Kumar},
+	journal = {International Journal of Research in all Subjects in Multi Languages},
+	year = {2025},
+	title = {{High Availability Strategies in Distributed Systems: A Practical Guide}},
+	url = {https://www.researchgate.net/publication/388075854_High_Availability_Strategies_in_Distributed_Systems_A_Practical_Guide}
+}
+
+@book{Kleppmann,
+    author    = {Martin Kleppmann},
+    title     = {{Designing Data-Intensive Applications: The Big Ideas Behind Reliable, Scalable, and Maintainable Systems}},
+    publisher = {O'Reilly Media},
+    year      = 2017,
+    url = {https://archive.org/details/designing-data-intensive-applications-th/page/n5/mode/2up}
+}
+
+@book{GarciaMolina,
+    author    = {Hector Garcia-Molina, Jeffrey D. Ullman, Jennifer Widom},
+    title     = {{Database Systems: The Complete Book. 2nd edition}},
+    publisher = {Pearson},
+    year      = 2008,
+    url = {https://people.inf.elte.hu/kiss/DB/ullman_the_complete_book.pdf}
+}
+
+@book{Bernstein,
+    author    = {Bernstein P., Hadzilacos V., Goodman N.},
+    title     = {{Concurrency Control and Recovery in Database Systems}},
+    publisher = {Addison},
+    year      = 1987
+}
+
+@online{SameerParadkar,
+    title={Designing for Uptime: A Framework for High Availability Systems},
+    url={https://medium.com/oolooroo/designing-for-uptime-a-framework-for-high-availability-systems-9d0caeb42397}, 
+    urldate={2025-06-08}
+}
+
+@online{heycoachHAA,
+    title={High Availability Architectures},
+    url={https://blog.heycoach.in/high-availability-architectures/}, 
+    urldate={2025-06-08}
+}
+
+@online{OracleRAC,
+    title={Disaster recovery options in the cloud},
+    url={https://www.oracle.com/database/real-application-clusters/}, 
+    urldate={2025-06-08}
+}
+
+@online{AmazonRds,
+    title={Disaster recovery options in the cloud},
+    url={https://docs.aws.amazon.com/whitepapers/latest/disaster-recovery-workloads-on-aws/disaster-recovery-options-in-the-cloud.html}, 
+    urldate={2025-06-08}
+}
+
+@online{AmazonRds2,
+    title={Amazon RDS Multi-AZ},
+    url={https://aws.amazon.com/rds/features/multi-az/}, 
+    urldate={2025-06-08}
+}
+
+@article{Afonin,
+	author = {Игорь Афонин},
+	year = {2014},
+	title = {{Решение для обеспечения постоянной доступности информационных систем}},
+	url = {https://www.cta.ru/articles/cta/obzory/tekhnologii/124642/}, 
+    urldate={2025-06-08}    
+}
+
+@online{SQLDeveloper,
+    title={SQL Developer. A great tool and better ways to use it},
+    url={https://www.red-gate.com/simple-talk/databases/oracle-databases/sql-developer-a-great-tool-and-better-ways-to-use-it/}, 
+    urldate={2025-06-08}
+}
+
+@book{SnedakerS,
+    author    = {Susan Snedaker},
+    title     = {{Business Continuity and Disaster Recovery}},
+    publisher = {Syngress},
+    year      = 2007,
+    url = {https://archive.org/details/susan-snedaker-business-continuity-and-disaster-recovery-planning-for-it-professionals-syngress-2007}
+}
+
+@article{RajeshBasa,
+	author = {Rajesh Basa},
+    journal = {International Journal for Multidisciplinary Research (IJFMR)},
+	year = {2024},
+	title = {{Cloud Disaster Recovery: Best Practices for Business Continuity in the Cloud}},
+	url = {https://www.ijfmr.com/papers/2024/5/28745.pdf}
+}
+
+@book{WallaceWebber,
+    author    = {Wallace M., Webber L},
+    title     = {{The Disaster Recovery Handbook}},
+    publisher = {AMACOM},
+    year      = 2018,
+    url = {https://www.yourhomeworksolutions.com/wp-content/uploads/edd/2021/05/The_disaster_recovery_handbook__a_step-by-step_plan_-_3rd_edition_4.pdf}
+}
+
+@online{NginxDocs1,
+    title={Configuring Active-Active High Availability},
+    url={https://docs.nginx.com/nginx/admin-guide/high-availability/ha-keepalived-nodes/}, 
+    urldate={2025-06-08}
+}
+
+@online{AvailMashtab,
+    title={Проектирование системы – горизонтальное и вертикальное масштабирование},
+    url={https://andreyex.ru/servera/proektirovanie-sistemy-gorizontalnoe-i-vertikalnoe-masshtabirovanie/?amp=1}, 
+    urldate={2025-06-08}
+}
+
+@online{StatefulSetsApps,
+    title={StatefulSets Applications in Kubernetes},
+    url={https://www.scaler.com/topics/kubernetes/kubernetes-statefulset/}, 
+    urldate={2025-06-08}
+}
+
+@online{AuroraAutoScaling,
+    title={Aurora Auto Scaling in AWS},
+    url={https://www.scaler.com/topics/aws/aurora-auto-scaling/}, 
+    urldate={2025-06-08}
+}
+
