--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1509,37 +1509,44 @@
 
 @online{oracledbdoc3,
     title={Oracle Database Security Guide. Part II Managing Security for Oracle Database Users},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc4,
     title={Oracle Database Installation Guide. Ch.9. Getting started with Oracle Database. Identifying Tablespaces and Data Files},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc5,
     title={Oracle Database Concepts. Part III. Oracle Transaction Management. Ch.9. Data Concurrency and Consistency},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc7,
     title={Oracle Database CREATE TRIGGER},
-    url={https://docs.oracle.com/cd/B13789_01/server.101/b10759/statements_7004.htm}
+    url={https://docs.oracle.com/cd/B13789_01/server.101/b10759/statements_7004.htm},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbdoc8,
     title={Oracle Database Using Trigger},
-    url={https://docs.oracle.com/cd/B10500_01/appdev.920/a96590/adg13trg.htm}
+    url={https://docs.oracle.com/cd/B10500_01/appdev.920/a96590/adg13trg.htm},
+    urldate = {2025-06-04}
 }
 
 @online{oracledbreference,
     title={Oracle SQL Language Reference},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/},
+    urldate = {2025-06-04}
 }
 
 @online{oracleessentialsc7,
     title={Oracle Essentials. Ch. 7. Multiuser Concurrency},
-    url={https://web.stanford.edu/class/cs345d-01/rl/oracle-locking.html}
+    url={https://web.stanford.edu/class/cs345d-01/rl/oracle-locking.html},
+    urldate = {2025-06-04}
 }
 
 @online{WikiExploit,
@@ -1549,7 +1556,8 @@
 }
 @online{KasperskyDailyOAuth,
     title={Google OAuth и фантомные аккаунты},
-    url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/}
+    url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/},
+    urldate = {2025-06-04}
 }
 
 @book{DMSSMthed,
