--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1424,24 +1424,6 @@
 		urldate={2025-04-21}
 }
 
-@online{PostgreSQLdocc37,
-    title={PostgreSQL Documentation. Chapter 37. Triggers},
-    url={https://www.postgresql.org/docs/current/triggers.html},
-		urldate={2025-04-21}
-}
-
-@online{Postgresqlcom,
-    title={Postgre SQL Commands. Part 6. Reference},
-    url={https://www.postgresql.org/docs/current/sql-commands.html},
-		urldate={2025-04-21}
-}
-
-@online{Postgresqltrig,
-    title={PostgreSQL 7.4.30 Documentation. Chapter 35. Triggers},
-    url={https://www.postgresql.org/docs/7.4/triggers.html},
-		urldate={2025-04-21}
-}
-
 @online{PostgreSQLlockh1,
     title={PostgreSQL Source Code. lock.h},
     url={https://doxygen.postgresql.org/lock_8h_source.html},
@@ -1515,28 +1497,14 @@
 		urldate={2025-04-21}
 }
 
-@online{Mysqldoc6,
-    title={MySQL 8.0 Reference Manual. Chapter 27},
-    url={https://dev.mysql.com/doc/refman/8.4/en/stored-objects.html},
-		urldate={2025-04-21}
-}
-
-@online{WashCoursesLec5,
-    title={Lecture 5. Transactions},
-    url={https://courses.cs.washington.edu/courses/csep544/10au/slides/lecture05-transactions-concurrency-control.pdf},
-		urldate={2025-06-04}
-}
-
 @online{YTcoursepostgre,
     title={DBA1-13. 09. Системный каталог},
-    url={https://www.youtube.com/watch?v=i6NQDPINglc},
-    urldate = {2025-06-04}
+    url={https://www.youtube.com/watch?v=i6NQDPINglc}
 }
 
 @online{IntuitMySQLadm,
     title={Администрирование MySQL. Лекция 7: Каталог данных MySQL},
-    url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530},
-    urldate = {2025-06-04}
+    url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530}
 }
 
 @online{IntuitThreats,
@@ -1547,104 +1515,72 @@
 
 @online{HabrTsql,
     title={Исследуем базы данных с помощью T-SQL},
-    url={https://habr.com/ru/articles/241079/},
-    urldate = {2025-06-04}
+    url={https://habr.com/ru/articles/241079/}
 }
 
 @online{HabrCloudThreats,
     title={Угрозы облачных вычислений и методы их защиты},
-    url={https://habr.com/ru/articles/183168/},
-    urldate = {2025-06-04}
+    url={https://habr.com/ru/articles/183168/}
 }
 
 @online{professorweb,
     title={Transact-SQL. Системный каталог},
-    url={https://professorweb.ru/my/sql-server/2012/level3/3_4.php},
-    urldate = {2025-06-04}
+    url={https://professorweb.ru/my/sql-server/2012/level3/3_4.php}
 }
 
 @online{MicrosoftLearnSQLserver,
     title={Microsoft SQL Server. Представления системного каталога (Transact-SQL)},
-    url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16},
-    urldate = {2025-06-04}
-}
-
-@online{MicrosoftLearnDDLTrig,
-    title={Microsoft SQL Server. DDL Triggers},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/triggers/ddl-triggers?view=sql-server-ver16},
-    urldate = {2025-06-04}
-}
-
-@online{MicrosoftLearnNestTrig,
-    title={Microsoft SQL Server. Create Nested Triggers},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/triggers/create-nested-triggers?view=sql-server-ver17},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverInd,
     title={Microsoft SQL Server. Indexes},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverSysDymView,
     title={Microsoft SQL Server. System dynamic management views},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/system-dynamic-management-views?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/system-dynamic-management-views?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTab,
     title={Microsoft SQL Server. Tables},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverPerm,
     title={Microsoft SQL Server. Get started with Database Engine permissions},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTransLog,
     title={Microsoft SQL Server. The transaction log},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/logs/the-transaction-log-sql-server?view=sql-server-ver16},
-    urldate = {2025-06-04}
-}
-
-@online{msSysKeyConstraints,
-    title={Microsoft SQL Server.},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-catalog-views/sys-key-constraints-transact-sql?view=sql-server-ver17},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/logs/the-transaction-log-sql-server?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverQueryStat,
     title={Microsoft SQL Server.},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-query-stats-transact-sql?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-query-stats-transact-sql?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTranLocks,
     title={Microsoft SQL Server.},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/system-dynamic-management-views/sys-dm-tran-locks-transact-sql?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverMasterdb,
     title={Microsoft SQL Server. Master database},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/master-database?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/master-database?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTempdb,
     title={Microsoft SQL Server. tempdb database},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/tempdb-database?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/tempdb-database?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverDBfiles,
     title={Microsoft SQL Server. Database files and filegroups},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/database-files-and-filegroups?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/databases/database-files-and-filegroups?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverFileLoc,
@@ -1654,38 +1590,32 @@
 
 @online{MicrosoftLearnSQLserverIsolation,
     title={Microsoft SQL Server. Set transaction isolation},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTabHints,
     title={Microsoft SQL Server. Table hints},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/queries/hints-transact-sql-table?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/queries/hints-transact-sql-table?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverTransLock,
     title={Microsoft SQL Server. Transaction locking and row versioning guide},
-    url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16}
 }
 
 @online{MicrosoftLearnSQLserverSetLockTout,
     title={Microsoft SQL Server. SET LOCK TIMEOUT},
-    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-lock-timeout-transact-sql?view=sql-server-ver16},
-    urldate = {2025-06-04}
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-lock-timeout-transact-sql?view=sql-server-ver16}
 }
 
 @online{OracleRedoLog,
     title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
-    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
 }
 
 @online{oracledbdoc0,
     title={Oracle Database Reference. Part I Initialization Parameters},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/initialization-parameters-2.html},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/initialization-parameters-2.html}
 }
 
 @online{oracledbdoc1,
@@ -1695,21 +1625,7 @@
 
 @online{oracledbdoc2,
     title={Oracle Database Reference. Part III Dynamic Performance Views},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html},
-    urldate = {2025-06-04}
-}
-
-@online{oracledbdoc6,
-    title={Trigger Enhancements in Oracle Database},
-    url={https://oracle-base.com/articles/11g/trigger-enhancements-11gr1},
-    urldate = {2025-06-04}
-}
-
-
-@online{sqlhack1,
-    title={All about locking in SQL Server},
-    url={https://www.sqlshack.com/locking-sql-server/},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
 }
 
 @online{bdufstec,
@@ -1726,44 +1642,22 @@
 
 @online{oracledbdoc3,
     title={Oracle Database Security Guide. Part II Managing Security for Oracle Database Users},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19}
 }
 
 @online{oracledbdoc4,
     title={Oracle Database Installation Guide. Ch.9. Getting started with Oracle Database. Identifying Tablespaces and Data Files},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/ntdbi/identifying-tablespaces-and-data-files.html}
 }
 
 @online{oracledbdoc5,
     title={Oracle Database Concepts. Part III. Oracle Transaction Management. Ch.9. Data Concurrency and Consistency},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C},
-    urldate = {2025-06-04}
-}
-
-@online{oracledbdoc7,
-    title={Oracle Database CREATE TRIGGER},
-    url={https://docs.oracle.com/cd/B13789_01/server.101/b10759/statements_7004.htm},
-    urldate = {2025-06-04}
-}
-
-@online{oracledbdoc8,
-    title={Oracle Database Using Trigger},
-    url={https://docs.oracle.com/cd/B10500_01/appdev.920/a96590/adg13trg.htm},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C}
 }
 
 @online{oracledbreference,
     title={Oracle SQL Language Reference},
-    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/},
-    urldate = {2025-06-04}
-}
-
-@online{oracleessentialsc7,
-    title={Oracle Essentials. Ch. 7. Multiuser Concurrency},
-    url={https://web.stanford.edu/class/cs345d-01/rl/oracle-locking.html},
-    urldate = {2025-06-04}
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/}
 }
 
 @online{WikiExploit,
@@ -1773,16 +1667,7 @@
 }
 @online{KasperskyDailyOAuth,
     title={Google OAuth и фантомные аккаунты},
-    url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/},
-    urldate = {2025-06-04}
-}
-
-@book{DMSSMthed,
-    author    = {Ramakrishnan R., Gehrke J.},
-    title     = {{Database Management Systems Solutions Manual. 3rd edition}},
-    publisher = {McGrawHill},
-    year = 2002,
-    url = {https://pages.cs.wisc.edu/~dbbook/openAccess/thirdEdition/solutions/ans3ed-oddonly.pdf}
+    url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/}
 }
 
 @book{ElmasriNavathe,
@@ -2139,3 +2024,156 @@
     urldate={2025-06-08}
 }
 
+@online{Alshahrani,
+    author = {A. Alshahrani and A. Alghamdi and others},
+    title = {High Availability of Distributed Systems: A Survey},
+    year = {2024},
+    url = {https://arxiv.org/abs/2405.09499},
+    urldate = {2025-06-08}
+}
+
+@online{Dutta,
+    author = {S. Dutta and S. Chalamalasetti and others},
+    title = {Building and Operating Highly Available Distributed Systems},
+    year = {2019},
+    url = {https://link.springer.com/article/10.1007/s00778-019-00581-w},
+    note = {Springer Journal of Data Science and Engineering},
+    urldate = {2025-06-08}
+}
+
+@online{Exadata,
+    title = {Oracle Maximum Availability Architecture on Oracle Exadata Cloud Systems},
+    url = {https://docs.oracle.com/en/database/oracle/oracle-database/23/haovw/oracle-maximum-availability-architecture-oracle-exadata-cloud-systems.html},
+    note = {Официальная документация Oracle},
+    urldate = {2025-06-08}
+}
+
+@online{Nvme,
+    author = {Gabriel Haas and Viktor Leis},
+    title = {Analyzing NVMe SSD Performance for Database Systems},
+    year = {2023},
+    url = {https://vldb.org/pvldb/vol16/p2090-haas.pdf},
+    note = {Proceedings of the VLDB Endowment (PVLDB)},
+    urldate = {2025-06-08}
+}
+
+@online{Nvmeof,
+    title = {NVM Express Over Fabrics Specification},
+    url = {https://nvmexpress.org/wp-content/uploads/NVMe_Over_Fabrics.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{GaleraCl,
+    title = {Galera Cluster},
+    url = {https://galeracluster.com/products/},
+    note = {Официальный сайт Galera Cluster},
+    urldate = {2025-06-08}
+}
+
+@online{Openarc,
+    title = {Orchestrator - MySQL replication topology management and HA tool},
+    url = {https://github.com/openark/orchestrator/blob/master/README.md},
+    urldate = {2025-06-08}
+}
+
+@online{Sosemkaram,
+    author = {Premathas Somasekaram and Radu Calinescu and Rajkumar Buyya},
+    title = {High Availability and Disaster Recovery in Cloud Platforms: A Survey},
+    url = {https://arxiv.org/abs/2109.15139},
+    urldate = {2025-06-08}
+}
+
+@online{Choudhury,
+    author = {Sid Choudhury},
+    title = {How Does the Raft Consensus Based Replication Protocol Work in YugabyteDB?},
+    url = {https://www.yugabyte.com/blog/how-does-the-raft-consensus-based-replication-protocol-work-in-yugabyte-db/},
+    urldate = {2025-06-08}
+}
+
+@online{FBShardManager,
+    title = {Scaling services with Shard Manager},
+    author = {{Facebook Engineering}},
+    year = {2020},
+    url = {https://engineering.fb.com/2020/08/24/production-engineering/scaling-services-with-shard-manager/},
+    urldate = {2025-06-08}
+}
+
+@online{FBRaftMeta,
+    title = {MySQL Raft Meta at Facebook},
+    author = {{Facebook Engineering}},
+    year = {2023},
+    url = {https://engineering.fb.com/2023/05/16/data-infrastructure/mysql-raft-meta/},
+    urldate = {2025-06-08}
+}
+
+@online{TAODistributedGraph,
+    title = {Facebook’s TAO Distributed Social Graph},
+    author = {Ankit Trehan},
+    url = {https://ankittrehan2000.medium.com/facebooks-tao-distributed-social-graph-5857641620da},
+    urldate = {2025-06-08}
+}
+
+@online{NetflixSimianArmy,
+    title = {The Netflix Simian Army},
+    author = {{Netflix Tech Blog}},
+    url = {https://netflixtechblog.com/the-netflix-simian-army-16e57fbab116},
+    urldate = {2025-06-08}
+}
+
+@online{LitmusChaosIntro,
+    title = {What is Litmus?},
+    author = {{LitmusChaos Documentation}},
+    url = {https://docs.litmuschaos.io/docs/introduction/what-is-litmus},
+    urldate = {2025-06-08}
+}
+
+@online{ChaosMeshDocs,
+    title = {Chaos Mesh Documentation},
+    author = {{Chaos Mesh Project}},
+    url = {https://chaos-mesh.org/docs/},
+    urldate = {2025-06-08}
+}
+
+@online{GoogleDremel,
+    title = {Dremel: Interactive Analysis of Web-Scale Datasets},
+    author = {{Google Research}},
+    year = {2010},
+    url = {https://research.google.com/pubs/archive/43438.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{USENIXLi,
+    title = {Towards a Strongly Consistent Distributed Metadata Store},
+    author = {Nanqinqin Li et al.},
+    year = {2022},
+    url = {https://www.usenix.org/system/files/atc22-li-nanqinqin.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{SplitBrainEtcd,
+    title = {Understanding Split Brain Scenarios in Distributed Systems and How etcd Mitigates Them},
+    author = {Sithara Wanigasooriya},
+    url = {https://sithara-wanigasooriya.medium.com/understanding-split-brain-scenarios-in-distributed-systems-and-how-etcd-mitigates-them-e3007acd506d},
+    urldate = {2025-06-08}
+}
+
+@online{GremlinChaosEngineering,
+    title = {Chaos Engineering},
+    author = {{Gremlin Inc.}},
+    url = {https://www.gremlin.com/chaos-engineering},
+    urldate = {2025-06-08}
+}
+
+@online{CAPTheoremGeeks,
+    title = {CAP Theorem in System Design},
+    author = {{GeeksforGeeks}},
+    url = {https://www.geeksforgeeks.org/cap-theorem-in-system-design/},
+    urldate = {2025-06-08}
+}
+
+@online{CAPTheoremIBM,
+    title = {CAP theorem},
+    author = {{IBM Think Blog}},
+    url = {https://www.ibm.com/think/topics/cap-theorem},
+    urldate = {2025-06-08}
+}
