--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -967,70 +967,70 @@ IOC являются ключевым элементом для аналитик
 В этом разделе рассмотрим пять современных примеров IDS и SIEM, выделив их особенности и предоставив ссылки для получения дополнительной информации.
 
 \subsubsection{Splunk}
-
-Splunk — это мощная платформа для анализа данных, которая также включает функции SIEM. Она собирает и анализирует данные из различных источников, включая журналы событий, сетевой трафик и данные приложений.
-
-Особенности Splunk:
 \begin{itemize}
-    \item \textbf{Масштабируемость}: Поддержка больших объемов данных и масштабирование по мере роста потребностей.
-    \item \textbf{Реальное время}: Анализ данных и обнаружение угроз в реальном времени.
-    \item \textbf{Интеграция}: Широкие возможности интеграции с другими инструментами безопасности.
-
+		\item \textbf{Описание:} Splunk является одной из самых мощных и популярных платформ для сбора, индексации, поиска, анализа и визуализации машинных данных. Изначально не будучи исключительно SIEM-системой, Splunk стал де-факто стандартом в этой области благодаря своей гибкости. Решение Splunk Enterprise Security (ES) представляет собой премиум-приложение, которое превращает платформу Splunk в полноценную SIEM-систему.
+    \item \textbf{Классификация:} полноценная SIEM-платформа.
+    \item \textbf{Особенности:}
+    \begin{itemize}
+        \item \textbf{Масштабируемость:} способна обрабатывать огромные объемы данных (терабайты в день), что подходит для очень крупных организаций.
+        \item \textbf{Гибкость и язык запросов (SPL):} мощный язык Search Processing Language (SPL) позволяет проводить сложный анализ данных и строить практически любые запросы и корреляции.
+        \item \textbf{Интеграция и расширяемость:} огромное количество готовых приложений и дополнений (apps and add-ons) на Splunkbase для интеграции с практически любыми источниками данных и средствами защиты.
+        \item \textbf{Машинное обучение:} встроенный Machine Learning Toolkit (MLTK) позволяет создавать собственные модели для обнаружения аномалий и угроз.
+    \end{itemize}
+    \item \textbf{Ссылка:} \url{https://www.splunk.com/}
 \end{itemize}
-
-Дополнительная информация доступна по ссылке: \url{https://www.splunk.com/}
 
 \subsubsection{AlienVault OSSIM}
-
-AlienVault OSSIM (Open Source SIEM) — это популярная платформа с открытым исходным кодом для управления событиями безопасности. Она объединяет возможности IDS, SIEM и управления уязвимостями.
-
-Особенности AlienVault OSSIM:
 \begin{itemize}
-    \item \textbf{Комплексность}: Объединение различных инструментов безопасности в одну платформу.
-    \item \textbf{Открытый исходный код}: Возможность модификации и адаптации под специфические нужды.
-    \item \textbf{Обширная база данных угроз}: Использование данных из многочисленных источников для улучшения обнаружения угроз.
+		\item \textbf{Описание:} AlienVault OSSIM (Open Source SIEM) является одной из самых популярных и функциональных SIEM-систем с открытым исходным кодом. Она объединяет в одном решении множество инструментов, что делает ее хорошим выбором для организаций, начинающих выстраивать процессы мониторинга безопасности.
+    \item \textbf{Классификация:} Open Source SIEM, включает компоненты HIDS и NIDS.
+    \item \textbf{Особенности:}
+    \begin{itemize}
+        \item \textbf{Комплексность <<из коробки>>:} включает в себя сбор логов, корреляцию событий, обнаружение вторжений (на базе Snort), сканирование уязвимостей (на базе OpenVAS) и мониторинг целостности файлов.
+        \item \textbf{Открытый исходный код:} будучи бесплатным решением, OSSIM позволяет организациям с ограниченным бюджетом внедрить базовые функции SIEM.
+        \item \textbf{Обширная база данных угроз (OTX):} интеграция с платформой Open Threat Exchange (OTX) от AlienVault позволяет автоматически получать актуальные индикаторы компрометации от глобального сообщества.
+    \end{itemize}
+    \item \textbf{Ссылка:} \url{https://cybersecurity.att.com/products/ossim}
 \end{itemize}
-
-Дополнительная информация доступна по ссылке: \url{https://cybersecurity.att.com/products/ossim}
 
 \subsubsection{Snort}
-
-Snort — это популярная система обнаружения вторжений с открытым исходным кодом, разработанная для анализа сетевого трафика в режиме реального времени. Она может работать как IDS или как инструмент предотвращения вторжений (IPS).
-
-Особенности Snort:
 \begin{itemize}
-    \item \textbf{Гибкость}: Возможность настройки под конкретные нужды пользователя.
-    \item \textbf{Сообщество пользователей}: Поддержка активного сообщества и регулярные обновления.
-    \item \textbf{Масштабируемость}: Возможность использования в различных масштабах, от небольших сетей до крупных корпоративных систем.
+		\item \textbf{Описание:} Snort -- это де-факто стандарт в мире сетевых систем обнаружения вторжений с открытым исходным кодом. Разработанный Мартином Рёшем, Snort может работать в трех режимах: как сниффер пакетов, как логгер пакетов и как полноценная NIDS/NIPS. Его работа основана на анализе трафика в реальном времени и сравнении его с набором правил для выявления вредоносной активности.
+    \item \textbf{Классификация:} сетевая система обнаружения/предотвращения вторжений (NIDS/NIPS).
+    \item \textbf{Особенности:}
+    \begin{itemize}
+        \item \textbf{Гибкость правил:} позволяет создавать очень гибкие и детализированные правила для обнаружения специфичных атак. Существуют как официальные наборы правил от Cisco Talos, так и правила от сообщества.
+        \item \textbf{Производительность:} Snort известен своей высокой производительностью и способностью анализировать трафик на скоростях в несколько гигабит в секунду.
+        \item \textbf{Сообщество пользователей:} огромное и активное сообщество способствует постоянному развитию продукта и появлению новых правил для обнаружения актуальных угроз.
+    \end{itemize}
+    \item \textbf{Ссылка:} \url{https://www.snort.org/}
 \end{itemize}
-
-Дополнительная информация доступна по ссылке: \url{https://www.snort.org/}
 
 \subsubsection{IBM QRadar}
-
-IBM QRadar — это мощная SIEM-платформа, предназначенная для мониторинга, анализа и реагирования на инциденты безопасности. Она собирает данные из различных источников и использует передовые методы аналитики для обнаружения угроз.
-
-Особенности IBM QRadar:
 \begin{itemize}
-    \item \textbf{Машинное обучение}: Использование методов машинного обучения для улучшения точности обнаружения угроз.
-    \item \textbf{Интеграция}: Широкие возможности интеграции с другими системами и инструментами безопасности.
-    \item \textbf{Реальное время}: Обнаружение и реагирование на инциденты в реальном времени.
+		\item \textbf{Описание:} IBM QRadar -- одна из лидирующих на рынке SIEM-платформ, предназначенная для крупных предприятий. Она собирает и анализирует данные о событиях, логах, сетевых потоках и уязвимостях для комплексного обнаружения угроз.
+    \item \textbf{Классификация:} коммерческая SIEM-платформа.
+    \item \textbf{Особенности:}
+    \begin{itemize}
+        \item \textbf{Анализ сетевых потоков (Network Flow Analysis):} помимо анализа логов, QRadar глубоко анализирует сетевые потоки (NetFlow, J-Flow, sFlow), что позволяет обнаруживать угрозы даже без наличия логов от конечных устройств.
+        \item \textbf{Машинное обучение и UEBA:} включает модули User Behavior Analytics (UBA) для выявления аномалий в поведении пользователей, что помогает обнаруживать инсайдерские угрозы и скомпрометированные учетные записи.
+        \item \textbf{Интеграция с Threat Intelligence:} тесная интеграция с платформой IBM X-Force Threat Intelligence для обогащения данных и повышения точности обнаружения.
+    \end{itemize}
+    \item \textbf{Ссылка:} \url{https://www.ibm.com/security/security-intelligence/qradar}
 \end{itemize}
-
-Дополнительная информация доступна по ссылке: \url{https://www.ibm.com/security/security-intelligence/qradar}
 
 \subsubsection{Palo Alto Networks Cortex XDR}
-
-Palo Alto Networks Cortex XDR — это платформа для обнаружения и реагирования на угрозы, которая объединяет возможности IDS и SIEM. Она предоставляет комплексный подход к безопасности, объединяя данные из различных источников для улучшения анализа и реагирования.
-
-Особенности Cortex XDR:
 \begin{itemize}
-    \item \textbf{Единая платформа}: Объединение данных и аналитики для всестороннего анализа угроз.
-    \item \textbf{Машинное обучение}: Использование передовых алгоритмов для улучшения точности обнаружения.
-    \item \textbf{Автоматизация}: Автоматизация процессов обнаружения и реагирования на угрозы.
+		\item \textbf{Описание:} Cortex XDR является примером платформы расширенного обнаружения и реагирования. Она собирает и коррелирует данные с конечных точек, из сети и облачных сред для обеспечения целостной видимости и обнаружения сложных атак.
+    \item \textbf{Классификация:} XDR-платформа, объединяющая возможности EDR, NDR и аналитики.
+    \item \textbf{Особенности:}
+    \begin{itemize}
+        \item \textbf{Единая платформа:} объединяет данные и аналитику из разных источников, что устраняет необходимость в ручной корреляции событий аналитиком.
+        \item \textbf{Поведенческая аналитика и машинное обучение:} глубоко анализирует поведение пользователей и сущностей, выявляя аномалии и отклонения от нормы.
+        \item \textbf{Автоматизация реагирования:} предоставляет возможности для автоматического реагирования на угрозы, такие как изоляция хоста или блокировка вредоносного процесса.
+    \end{itemize}
+    \item \textbf{Ссылка:} \url{https://www.paloaltonetworks.com/cortex/xdr}
 \end{itemize}
-
-Дополнительная информация доступна по ссылке: \url{https://www.paloaltonetworks.com/cortex/xdr}
 
 
 \subsection{Развитие систем распознавания вторжений}
